sw/source/core/fields/cellfml.cxx
@@ -152,9 +152,8 @@ double SwTableBox::GetValue( SwTableCalcPara& rCalcPara ) const
         OUString sText = pTextNd->GetText();
 
         // use text of the tracked changes
-        if ( sText != pTextNd->GetRedlineText() &&
-            sText.getLength() > 0 &&
-            sText[0] != CH_TXTATR_BREAKWORD && sText[0] != CH_TXTATR_INWORD )
+        if ( sText.getLength() > 0 &&
+                sText[0] != CH_TXTATR_BREAKWORD && sText[0] != CH_TXTATR_INWORD )
         {
             sText = pTextNd->GetRedlineText();
         }
