sw/source/core/table/swtable.cxx
@@ -2716,7 +2716,8 @@ SwNodeOffset SwTableBox::IsValidNumTextNd( bool bCheckAttr ) const
                                     continue;
                                 }
                             }
-                            else if( RES_TXTATR_ANNOTATION == pAttr->Which() )
+                            else if( RES_TXTATR_ANNOTATION == pAttr->Which() ||
+                                     RES_TXTATR_FTN == pAttr->Which() )
                             {
                                 continue;
                             }
